<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            tools:context="uk.co.brightec.ratetheapp_android.fragments.DefaultFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <!-- A CardView that contains introduction -->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            card_view:cardCornerRadius="4dp"
            card_view:contentPadding="8dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          xmlns:tools="http://schemas.android.com/tools"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/custom_appearance_introduction"/>

                <Button
                    android:id="@+id/btn_viewsource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Demo.Intro.Button"
                    android:text="@string/custom_appearance_button"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Demo 1, A CardView that demonstrates a customised title -->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            card_view:cardCornerRadius="4dp"
            card_view:contentPadding="16dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          xmlns:tools="http://schemas.android.com/tools"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:text="@string/demo1_description"/>

                <!-- A custom rateTheAppName is used to stop this instance of the widget being hidden if the default widget is hidden -->
                <uk.co.brightec.ratetheapp.RateTheApp
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    app:rateTheAppName="customisedTitleWidget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:rateTheAppTitleText="@string/demo1_customised_title"
                    app:rateTheAppTitleTextAppearance="@style/Demo.1.TextAppearance"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Demo 2, A CardView that demonstrates no title -->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            card_view:cardCornerRadius="4dp"
            card_view:contentPadding="16dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          xmlns:tools="http://schemas.android.com/tools"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:text="@string/demo2_description"/>

                <!-- A custom rateTheAppName is used to stop this instance of the widget being hidden if the default widget is hidden -->
                <uk.co.brightec.ratetheapp.RateTheApp
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    app:rateTheAppName="noTitleWidget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:rateTheAppTitleText=""/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Demo 3, A CardView that demonstrates a customised star colour -->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            card_view:cardCornerRadius="4dp"
            card_view:contentPadding="16dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          xmlns:tools="http://schemas.android.com/tools"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:text="@string/demo3_description"/>

                <!-- A custom rateTheAppName is used to stop this instance of the widget being hidden if the default widget is hidden -->
                <uk.co.brightec.ratetheapp.RateTheApp
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    app:rateTheAppName="customisedStarColourWidget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:rateTheAppSelectedStarColor="@color/colorPrimaryDark"
                    app:rateTheAppUnselectedStarColor="@color/colorPrimary"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>