<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2016 Brightec Ltd
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context="uk.co.brightec.ratetheapp_android.fragments.DefaultFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <!-- A CardView that contains introduction -->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            card_view:cardCornerRadius="4dp"
            card_view:contentPadding="8dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          xmlns:tools="http://schemas.android.com/tools"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/custom_behaviour_introduction"/>

                <Button
                    android:id="@+id/btn_viewsource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Demo.Intro.Button"
                    android:text="@string/custom_behaviour_button"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Demo 4, A CardView that demonstrates no behaviour when rating changes -->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            card_view:cardCornerRadius="4dp"
            card_view:contentPadding="16dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          xmlns:tools="http://schemas.android.com/tools"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:text="@string/demo4_description"/>

                <!-- A custom rateTheAppName is used to stop this instance of the widget being hidden if the default widget is hidden -->
                <uk.co.brightec.ratetheapp.RateTheApp
                    android:id="@+id/noAction"
                    app:rateTheAppName="noActionWidget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Demo 5, A CardView that demonstrates custom behaviour -->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            card_view:cardCornerRadius="4dp"
            card_view:contentPadding="16dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          xmlns:tools="http://schemas.android.com/tools"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:text="@string/demo5_description"/>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="16dp"
                    style="@style/Demo.5.TextAppearance"
                    xmlns:tools="http://schemas.android.com/tools"
                    tools:text="Current Rating: 1.0"/>

                <!-- A custom rateTheAppName is used to stop this instance of the widget being hidden if the default widget is hidden -->
                <uk.co.brightec.ratetheapp.RateTheApp
                    android:id="@+id/customAction"
                    app:rateTheAppName="customActionWidget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>